--- a/LESSONS/lesson9/task5/index.html
+++ b/LESSONS/lesson9/task5/index.html
@@ -3,31 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Products</li>
-                <li>Contacts</li>
+    <header class="header">
+        <nav class="navigation">
+            <ul class="nav-list">
+                <li class="nav-item">Home</li>
+                <li class="nav-item">Products</li>
+                <li class="nav-item">Contacts</li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="container">
-            <div class="three1"></div>
-            <div class="three2"></div>
-            <div class="one">
-                <div class="two1"></div>
-                <div class="two2"></div>
-            </div>
+    <main class="content">
+        <div class="head">
+            <div class="ear ear_right"></div>
+            <div class="ear ear_left"></div>
+            <div class="eye eye_right"></div>
+            <div class="eye eye_left"></div>
         </div>
     </main>
 </body>
