--- a/LESSONS/lesson11/task4/index.html
+++ b/LESSONS/lesson11/task4/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <div class="text" title="I'm a title text">
-        <!-- <span class="text2">Hover over me</span> -->
+    <div class="main">
+        <div class="text" title="I'm a title text">Hover over me</div>
         <span class="tooltip">I'm a tooltip</span>
     </div>
+
 </body>
 
 </html>
