--- a/LESSONS/lesson12/task1/index.html
+++ b/LESSONS/lesson12/task1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>The Web technologies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300i,400,500i,700,700i,900,900i&display=swap&subset=cyrillic,greek-ext" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
