--- a/LESSONS/lesson12/task3/index.html
+++ b/LESSONS/lesson12/task3/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
-    <title>Fonts</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <style>
-        h1 {
-            font-size: 74px;
-            text-align: center;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            width: 50%;
-            margin: 16px auto;
-        }
-        
-        div {
-            text-align: center;
-            background-color: coral;
-            height: 200px;
-            line-height: 200px;
-        }
-    </style>
+    <title>Стилизуем списки</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Some header. Really long header for this page</h1>
+        <h1>Стилизуем списки</h1>
     </header>
-    <div>Some text</div>
+    <main class="container">
+        <p>Относительные единицы измерения (em и rem) зависят от некоторых параметров родительских элементов. Абсолютные
+            величины (px) будут отображаться одиннаково повсюду.</p>
+        <ul class="list">
+            <li class="first">Overline</li>
+            <li class="second">Line-through</li>
+            <li class="third">Underline</li>
+        </ul>
+    </main>
 </body>
 
 </html>
