--- a/LESSONS/lesson13/task2/index.html
+++ b/LESSONS/lesson13/task2/index.html
@@ -4,20 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
-    <style>
-        .icon {
-            margin: 100px;
-            width: 100px;
-            height: 100px;
-            background-image: url(sprites.jpg);
-            background-position-x: -200px;
-        }
-        
-        .icon:hover {
-            background-position-y: -100px;
-        }
-    </style>
+
 </head>
 
 <body>
