--- a/LESSONS/lesson13/task3/index.html
+++ b/LESSONS/lesson13/task3/index.html
@@ -3,26 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <title>Document</title>
-    <style>
-        .super-header {
-            text-align: center;
-            margin: 0;
-            font-size: 96px;
-            text-transform: uppercase;
-            font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(45deg, #f00, #ffff00);
-            -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
-        }
-    </style>
+    <title>Gradient Text Color</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1 class="super-header">Super title</h1>
+        <h1 class="header-text">Super title</h1>
     </header>
 </body>
 
