--- a/LESSONS/lesson15/task2/index.html
+++ b/LESSONS/lesson15/task2/index.html
@@ -4,21 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<style>
-    .main-video {
-        max-width: 100%;
-        height: auto;
-        margin-top: 50px;
-        margin: auto 0;
-        display: block;
-    }
-</style>
 
 <body>
-    <video class="main-video" src="example.mp4" controls poster="poster.jpg">
-        <source src="example.mp4" type="video/mp4">
+    <video class="video" controls poster="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/poster.jpg">
+        <source src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task2/example.mp4" type="video/mp4">
     </video>
 </body>
 
