--- a/LESSONS/lesson16/task1/index.html
+++ b/LESSONS/lesson16/task1/index.html
@@ -20,7 +20,7 @@
             <input type="text" id="last-form-control" name="lastName" value="Emerson" readonly>
         </div>
         <div class="form-control">
-            <input type="number" min="10" max="20" value="17" name="age">
+            <input type="number" value="17" name="age">
         </div>
         <div class="form-control">
 
