--- a/LESSONS/lesson16/task1/index.html
+++ b/LESSONS/lesson16/task1/index.html
@@ -25,12 +25,12 @@
         <div class="form-control">
 
             <label>
-                <input type="checkbox" name="agree" disabled>
+                <input type="checkbox" name="agree">
                 Accept therms and conditions
             </label>
         </div>
         <div class="form-control">
-            <input class="choose-gender" type="radio" id="gender-male" name="gender" checked>
+            <input class="choose-gender" type="radio" id="gender-male" name="gender">
             <label for="gender-male">Male</label>
             <input class="choose-gender" type="radio" id="gender-female" name="gender">
             <label for="gender-female">Female</label>
