--- a/LESSONS/lesson16/task1/index.html
+++ b/LESSONS/lesson16/task1/index.html
@@ -5,40 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
-    <style>
-        .form-control {
-            margin: 16px;
-        }
-    </style>
+
 </head>
 
 <body>
     <form>
         <div class="form-control">
-            <label for="last-form-control"></label>
             <input type="text" id="last-form-control" name="lastName" value="Emerson" readonly>
         </div>
         <div class="form-control">
             <input type="number" value="17" name="age">
         </div>
         <div class="form-control">
-
-            <label>
-                <input type="checkbox" name="agree">
-                Accept therms and conditions
-            </label>
+            <input type="checkbox" name="agree"> Accept therms and conditions
         </div>
-        <div class="form-control">
-            <input class="choose-gender" type="radio" id="gender-male" name="gender">
+        <div class="choose-gender">
+            <input type="radio" id="gender-male" name="gender" checked>
             <label for="gender-male">Male</label>
-            <input class="choose-gender" type="radio" id="gender-female" name="gender">
+            <input type="radio" id="gender-female" name="gender">
             <label for="gender-female">Female</label>
-            <input class="choose-gender" type="radio" id="gender-secret" name="gender">
+            <input type="radio" id="gender-secret" name="gender">
             <label for="gender-secret">Secret</label>
         </div>
         <div class="form-control">
-            <textarea maxlength="10" name="description" placeholder="Write description..." required>
+            <textarea name="description" placeholder="Write description...">
             </textarea>
         </div>
         <div class="form-control">
