--- a/LESSONS/lesson16/task1/index.html
+++ b/LESSONS/lesson16/task1/index.html
@@ -22,16 +22,16 @@
             <input type="checkbox" name="agree"> Accept therms and conditions
         </div>
         <div class="choose-gender">
-            <input type="radio" id="gender-male" name="gender" checked>
-            <label for="gender-male">Male</label>
-            <input type="radio" id="gender-female" name="gender">
+
+            <input type="radio" name="gender" id="gender-male" checked>
+            <label for="gender-male" class="male-checked">Male</label>
+            <input type="radio" name="gender" id="gender-female">
             <label for="gender-female">Female</label>
-            <input type="radio" id="gender-secret" name="gender">
+            <input type="radio" name="gender" id="gender-secret">
             <label for="gender-secret">Secret</label>
         </div>
         <div class="form-control">
-            <textarea name="description" placeholder="Write description...">
-            </textarea>
+            <textarea name="description" placeholder="Write description..."></textarea>
         </div>
         <div class="form-control">
             <button type="submit">Submit</button>
