--- a/LESSONS/lesson16/task2/index.html
+++ b/LESSONS/lesson16/task2/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-control">
             <label>
-            <input type="checkbox" name="agree"> Accept therms and conditions
+            <input type="checkbox" name="agree" disabled> Accept therms and conditions
            </label>
         </div>
         <div class="choose-gender">
