--- a/LESSONS/lesson16/task2/index.html
+++ b/LESSONS/lesson16/task2/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-control">
             <label>
-            <input type="checkbox" name="agree" disabled> Accept therms and conditions
+            <input type="checkbox" name="agree" disabled> Accept terms and conditions
            </label>
         </div>
         <div class="choose-gender">
@@ -35,7 +35,7 @@
             <label for="gender-secret" class="secret-name">Secret</label>
         </div>
         <div class="form-control">
-            <textarea name="description" placeholder="Write description..."></textarea>
+            <textarea name="description" max="10" placeholder="Write description..."></textarea>
         </div>
         <div class="form-control">
             <button type="submit">Submit</button>
