--- a/LESSONS/lesson16/task2/index.html
+++ b/LESSONS/lesson16/task2/index.html
@@ -35,7 +35,7 @@
             <label for="gender-secret" class="secret-name">Secret</label>
         </div>
         <div class="form-control">
-            <textarea name="description" max="10" placeholder="Write description..."></textarea>
+            <textarea name="description" maxlength="10" placeholder="Write description..."></textarea>
         </div>
         <div class="form-control">
             <button type="submit">Submit</button>
