--- a/LESSONS/lesson16/task5/index.html
+++ b/LESSONS/lesson16/task5/index.html
@@ -47,7 +47,7 @@
         <div class="form-control">
             <input type="password" name="password" value="secret">
         </div>
-        <div class="languages control">
+        <div class="languages">
             <input type="radio" name="language" value="html">HTML
             <input type="radio" name="language" value="css" checked>CSS
             <input type="radio" name="language" value="javascript">JavaScript
