--- a/LESSONS/lesson16/task5/index.html
+++ b/LESSONS/lesson16/task5/index.html
@@ -47,8 +47,8 @@
         <div class="form-control">
             <input type="password" name="password" value="secret">
         </div>
-        <div class="languages">
-            <input type="radio" name="language" value="html">HTML
+        <div class="languages control">
+            <input type="radio" name="language" value="html">HTML 
             <input type="radio" name="language" value="css" checked>CSS
             <input type="radio" name="language" value="javascript">JavaScript
         </div>
