--- a/LESSONS/lesson17/task1/index.html
+++ b/LESSONS/lesson17/task1/index.html
@@ -4,23 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
-
 </head>
 
 <body>
     <div>
         <table>
-            <caption>Shopping List</caption>
+            <caption>Shopping list</caption>
             <thead>
                 <tr>
                     <th>Product</th>
                     <th>Amount</th>
                     <th>Price</th>
-                    <th>Total</th>
+                    <th>Subtotal</th>
                 </tr>
             </thead>
             <tbody>
@@ -42,14 +40,13 @@
                     <td>$10</td>
                     <td>$50</td>
                 </tr>
-            </tbody>
             <tfoot>
                 <tr>
                     <td colspan="3">Total</td>
                     <td>$60</td>
-
                 </tr>
             </tfoot>
+            </tbody>
         </table>
     </div>
 </body>
