--- a/LESSONS/lesson17/task3/index.html
+++ b/LESSONS/lesson17/task3/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Chess board</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" 
+          integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <table>
-        <tr>
+        <tr class="top-letters">
             <td></td>
             <td>A</td>
             <td>B</td>
@@ -22,7 +23,7 @@
             <td>H</td>
             <td></td>
         </tr>
-        <tr>
+        <tr class="first-row">
             <td>8</td>
             <td></td>
             <td></td>
@@ -34,7 +35,7 @@
             <td></td>
             <td>8</td>
         </tr>
-        <tr>
+        <tr class="second-row">
             <td>7</td>
             <td></td>
             <td></td>
@@ -46,7 +47,7 @@
             <td></td>
             <td>7</td>
         </tr>
-        <tr>
+        <tr class="third-row">
             <td>6</td>
             <td></td>
             <td></td>
@@ -58,7 +59,7 @@
             <td></td>
             <td>6</td>
         </tr>
-        <tr>
+        <tr class="fourth-row">
             <td>5</td>
             <td></td>
             <td></td>
@@ -70,7 +71,7 @@
             <td></td>
             <td>5</td>
         </tr>
-        <tr>
+        <tr class="fifth-row">
             <td>4</td>
             <td></td>
             <td></td>
@@ -82,7 +83,7 @@
             <td></td>
             <td>4</td>
         </tr>
-        <tr>
+        <tr class="sixth-row">
             <td>3</td>
             <td></td>
             <td></td>
@@ -94,7 +95,7 @@
             <td></td>
             <td>3</td>
         </tr>
-        <tr>
+        <tr class="seventh-row">
             <td>2</td>
             <td></td>
             <td></td>
@@ -106,7 +107,7 @@
             <td></td>
             <td>2</td>
         </tr>
-        <tr>
+        <tr class="eighth-row">
             <td>1</td>
             <td></td>
             <td></td>
@@ -118,7 +119,7 @@
             <td></td>
             <td>1</td>
         </tr>
-        <tr>
+        <tr class="bottom-letters">
             <td></td>
             <td>A</td>
             <td>B</td>
