--- a/LESSONS/lesson21/task4/index.html
+++ b/LESSONS/lesson21/task4/index.html
@@ -16,7 +16,7 @@
         <nav class="navigation">
             <ul class="nav-list">
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Responsive images</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="#">Mediaquaeries</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="#">Mediaqueries</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Flexbox</a></li>
             </ul>
         </nav>
