--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -13,6 +13,7 @@
         
         picture {
             max-width: 100%;
+            max-height: 100%;
             margin: auto;
         }
     </style>
