--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -9,12 +9,13 @@
     <style>
         main {
             display: flex;
+            text-align: center;
         }
         
         picture {
+            margin: auto;
             max-width: 100%;
             max-height: 100%;
-            margin: auto;
         }
     </style>
 
@@ -23,9 +24,9 @@
 <body>
     <main>
         <picture>
-            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" media="(min-width: 400px)">
-            <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/small.jpg">
-            <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/task3/big.jpeg" alt="Tree on the land">
+            <source srcset="big.jpeg" media="(min-width: 400px)">
+            <source srcset="small.jpg">
+            <img src="big.jpeg" alt="Tree on the land">
         </picture>
     </main>
 </body>
