--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -10,6 +10,7 @@
         main {
             display: flex;
             text-align: center;
+            justify-content: center; 
         }
         
         picture {
