--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -14,7 +14,7 @@
         
         picture {
             margin: auto;
-            max-height: 100%;
+            max-height: auto;
         }
     </style>
 
