--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -9,12 +9,13 @@
     <style>
         main {
             display: flex;
-            justify-content: center; 
+/*             justify-content: center;  */
         }
         
         picture {
             margin: auto;
-            max-height: auto;
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 
