--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -9,7 +9,7 @@
     <style>
         main {
             display: flex;
-/*             justify-content: center;  */
+            justify-content: center;  
         }
         
         picture {
