--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -13,7 +13,7 @@
         }
         
         picture {
-            margin: auto;
+/*             margin: auto; */
             max-width: 100%;
             max-height: 100%;
         }
