--- a/LESSONS/lesson22/task3/index.html
+++ b/LESSONS/lesson22/task3/index.html
@@ -5,20 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
-    <style>
-        main {
-            display: flex;
-            justify-content: center;  
-        }
-        
-        picture {
-/*             margin: auto; */
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
-
+    
 </head>
 
 <body>
