--- a/LESSONS/lesson22/task4/index.html
+++ b/LESSONS/lesson22/task4/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header"><i class="fas fa-bars"></i></header>
+    <header class="header__btn"><i class="fas fa-bars"></i></header>
     <main class="main">
         <nav class="navigation">
             <ul class="nav-list">
