--- a/LESSONS/lesson22/task5/index.html
+++ b/LESSONS/lesson22/task5/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -25,18 +24,13 @@
             <section class="section">
                 <h2 class="section__header">True story</h2>
                 <picture class="picture">
-                    <source
-                        srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png"
-                        media="(min-width:600px)">
-                    <source
-                        srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/small.png">
-                    <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png"
-                        alt="Sea and sky">
+                    <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png" media="(min-width:600px)">
+                    <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/small.png">
+                    <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png" alt="Sea and sky">
                 </picture>
                 <p>There are few ways to define <code>font-size</code>:</p>
                 <ul class="units-list">
-                    <li><span class="css-units">px</span> are good if you need strict definition for a size of text. In
-                        other cases it is better to use relative units listed below.</li>
+                    <li><span class="css-units">px</span> are good if you need strict definition for a size of text. In other cases it is better to use relative units listed below.</li>
                     <li><span class="css-units">em</span> based on current font size</li>
                     <li><span class="css-units">rem</span> based on <code>&lt;html&gt;</code> font-size</li>
                     <li><span class="css-units">%</span> based on parent font size</li>
