--- a/LESSONS/lesson22/task5/index.html
+++ b/LESSONS/lesson22/task5/index.html
@@ -13,7 +13,7 @@
         <h1>Responsive website</h1>
     </header>
     <main class="main">
-        <div class="main__nav-and-section">
+        <div class="main-nav-section">
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-list-item"><a href="#" class="nav-list-link">Responsive images</a></li>
